--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ div{
 <body>
     <div id="divi">
 
-    <button onclick="alert('Hola!')">Saludar</button>
+    <button id="saludo">Saludar</button>
 
     </div>
     <script src="eventos.js"></script>
